cmake_minimum_required(VERSION 3.5)

project(kisskaVulkan LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall")

if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    set(Vulkan_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/dependences/libs/vulkan)
    set(Vulkan_LIBRARIES ${CMAKE_CURRENT_SOURCE_DIR}/dependences/libs/vulkan/x64)
endif()
if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    find_package(Vulkan REQUIRED FATAL_ERROR)
    set(Vulkan_INCLUDE_DIRS ${Vulkan_INCLUDE_DIRS}/vulkan)
endif()

set(GLFW_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dependences/libs/glfw)
set(STB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dependences/libs/stb)
set(GLTF_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dependences/libs/tinygltf)
set(GLM_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dependences/libs/glm)

if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    SET(LIBS_DIRS ${Vulkan_LIBRARIES}/vulkan-1.lib ${GLFW_DIR}/build/src/Release/glfw3dll.lib)
    SET(LIBS_DIRS_D ${Vulkan_LIBRARIES}/vulkan-1.lib ${GLFW_DIR}/build/src/Debug/glfw3dll.lib)
endif()
if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    SET(LIBS_DIRS ${Vulkan_LIBRARIES} ${GLFW_DIR}/build/src/libglfw.so.3.4)
endif()

add_subdirectory(core/utils)
add_subdirectory(core/graphicsManager)
add_subdirectory(core/interfaces)
add_subdirectory(core/deferredGraphics)
add_subdirectory(core/models)
add_subdirectory(core/transformational)
add_subdirectory(core/math)
add_subdirectory(test)
